--- a/package.xml
+++ b/package.xml
@@ -2,52 +2,43 @@
 <package format="2">
   <name>gazebo_conveyor</name>
   <version>1.0.0</version>
-  <description>The gazebo_conveyor package</description>
+  <description>Plugin for gazebo, to simulate a conveyor belt.</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="gurnarok@todo.todo">gurnarok</maintainer>
+  <author email="hannu.2.henttinen@samk.fi">Hannu Henttinen</author>
+  <maintainer email="hannu.2.henttinen@samk.fi">Hannu Henttinen</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>GPLv3</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/gazebo_conveyor</url> -->
+  <url type="repository">https://github.com/rokokoo/gazebo-conveyor</url>
 
+  <!-- OSRF creators of the ARIAC package -->
+  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
+  <author email="dhood@osrfoundation.org">D. Hood</author>
+  <author email="william@osrfoundation.org">William Woodall</author>
+  <author email="sloretz@osrfoundation.org">Shane Loretz</author>
 
-  <!-- Author tags are optional, multiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintainers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <!-- iiwa_control, iiwa_description, iiwa_gazebo author -->
+  <author email="salvo.virga@tum.de">Salvo Virga</author>
 
+  <!-- ur_gazebo authors -->
+  <author>Alexander Bubeck</author>
+  <author email="sedwards@swri.org">Shaun Edwards</author>
+  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
 
-  <!-- The *depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
-  <!-- Examples: -->
-  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
-  <!--   <depend>roscpp</depend> -->
-  <!--   Note that this is equivalent to the following: -->
-  <!--   <build_depend>roscpp</build_depend> -->
-  <!--   <exec_depend>roscpp</exec_depend> -->
-  <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
-  <!-- Use build_export_depend for packages you need in order to build against this package: -->
-  <!--   <build_export_depend>message_generation</build_export_depend> -->
-  <!-- Use buildtool_depend for build tool packages: -->
-  <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use exec_depend for packages you need at runtime: -->
-  <!--   <exec_depend>message_runtime</exec_depend> -->
-  <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
-  <!-- Use doc_depend for packages you need only for building documentation: -->
-  <!--   <doc_depend>doxygen</doc_depend> -->
+  <!-- ur_description authors -->
+  <author>Wim Meeussen</author>
+  <author email="kphawkins@gatech.edu">Kelsey Hawkins</author>
+  <author>Mathias Ludtke</author>
+  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
+
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>gazebo_plugins</depend>
@@ -59,10 +50,5 @@
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
 
-
-  <!-- The export tag contains other, unspecified, tags -->
-  <export>
-    <!-- Other tools can request additional information be placed here -->
-
-  </export>
+  <export></export>
 </package>
